--- a/Finimalism-11.css
+++ b/Finimalism-11.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root {
+  --accent: #8564ff;
+  --backdropBlur: blur(0px);
+  --detailGradient: linear-gradient(54deg, rgb(6.667% 5.49% 11.765%) 0%, rgb(6.667% 5.49% 11.765% / 0.99996337890625) 6.25%, rgb(6.667% 5.49% 11.765% / 0.9994140625) 12.5%, rgb(6.667% 5.49% 11.765% / 0.99703369140625) 18.75%, rgb(6.667% 5.49% 11.765% / 0.990625) 25%, rgb(6.667% 5.49% 11.765% / 0.97711181640625) 31.25%, rgb(6.667% 5.49% 11.765% / 0.9525390625) 37.5%, rgb(6.667% 5.49% 11.765% / 0.91207275390625) 43.75%, rgb(6.667% 5.49% 11.765% / 0.85) 50%, rgb(6.667% 5.49% 11.765% / 0.78792724609375) 56.25%, rgb(6.667% 5.49% 11.765% / 0.7474609375) 62.5%, rgb(6.667% 5.49% 11.765% / 0.72288818359375) 68.75%, rgb(6.667% 5.49% 11.765% / 0.709375) 75%, rgb(6.667% 5.49% 11.765% / 0.70296630859375) 81.25%, rgb(6.667% 5.49% 11.765% / 0.7005859375) 87.5%, rgb(6.667% 5.49% 11.765% / 0.70003662109375) 93.75%, rgb(6.667% 5.49% 11.765% / 0.7) 100% );
   --loginGradient: linear-gradient(180deg, rgb(10.98% 11.373% 22.353%) 0%, rgb(10.411% 10.755% 21.118%) 6.25%, rgb(9.877% 10.178% 19.963%) 12.5%, rgb(9.381% 9.64% 18.888%) 18.75%, rgb(8.922% 9.142% 17.892%) 25%, rgb(8.499% 8.684% 16.976%) 31.25%, rgb(8.113% 8.266% 16.14%) 37.5%, rgb(7.763% 7.888% 15.383%) 43.75%, rgb(7.451% 7.549% 14.706%) 50%, rgb(7.175% 7.25% 14.108%) 56.25%, rgb(6.936% 6.991% 13.591%) 62.5%, rgb(6.734% 6.772% 13.153%) 68.75%, rgb(6.569% 6.593% 12.794%) 75%, rgb(6.44% 6.454% 12.515%) 81.25%, rgb(6.348% 6.354% 12.316%) 87.5%, rgb(6.293% 6.294% 12.197%) 93.75%, rgb(6.275% 6.275% 12.157%) 100% );
   --tint: #110e1eeb; 
   --tint2: #473391;
-  --accent: #8564ff;
-  --detailGradient: linear-gradient(54deg, rgb(6.667% 5.49% 11.765%) 0%, rgb(6.667% 5.49% 11.765% / 0.99996337890625) 6.25%, rgb(6.667% 5.49% 11.765% / 0.9994140625) 12.5%, rgb(6.667% 5.49% 11.765% / 0.99703369140625) 18.75%, rgb(6.667% 5.49% 11.765% / 0.990625) 25%, rgb(6.667% 5.49% 11.765% / 0.97711181640625) 31.25%, rgb(6.667% 5.49% 11.765% / 0.9525390625) 37.5%, rgb(6.667% 5.49% 11.765% / 0.91207275390625) 43.75%, rgb(6.667% 5.49% 11.765% / 0.85) 50%, rgb(6.667% 5.49% 11.765% / 0.78792724609375) 56.25%, rgb(6.667% 5.49% 11.765% / 0.7474609375) 62.5%, rgb(6.667% 5.49% 11.765% / 0.72288818359375) 68.75%, rgb(6.667% 5.49% 11.765% / 0.709375) 75%, rgb(6.667% 5.49% 11.765% / 0.70296630859375) 81.25%, rgb(6.667% 5.49% 11.765% / 0.7005859375) 87.5%, rgb(6.667% 5.49% 11.765% / 0.70003662109375) 93.75%, rgb(6.667% 5.49% 11.765% / 0.7) 100% );
   --rounding: 0.8em;
 }
 
@@ -4358,6 +4359,7 @@ a[href*="shokoanime.com"] {
   min-height: calc(100vh - 3em) !important;
   animation: fadeTitle 0.5s ease-out 2s forwards;
   opacity: 0;
+  backdrop-filter: var(--backdropBlur);
 }
 
 .detailPageWrapperContainer:has(.listItem.listItem-largeImage.listItem-withContentWrapper[data-type="Episode"]),
