--- a/Finimalism11-Black.css
+++ b/Finimalism11-Black.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/gh/tedhinklater/finimalism@main/finimalism11.css");
+@import url("https://cdn.jsdelivr.net/gh/tedhinklater/finimalism@main/Finimalism-11.css");
 
 /* ---- Black ---- */
 
