--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -194,12 +194,13 @@ h2 {
   height: 6.3em;
   margin-top: 0.5em;
   margin-bottom: -1em;
+  padding-top: 0;
+  border-radius: 0;
 }
 
 .layout-desktop p.overview:hover,
 .layout-tv p.overview:focus {
   width: 110vh;
-  height: auto;
   background: var(--tint);
   border: 0.5px solid;
   border-color: #fff3;
@@ -207,8 +208,9 @@ h2 {
   margin-left: -1px;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  height: 6.3em;
+  height: 6.6em;
   transition: width 0.2s ease-out 1s, background-color 1s ease-out 0s, border-color 0.5s ease-out 0s, padding-left 1s ease-out 0.25s, padding-right 1s ease-out 0.25s;
+  border-radius: var(--rounding);
   overflow-y: scroll;
 }
 
@@ -285,11 +287,12 @@ h2 {
   margin-top: 0em;
   margin-bottom: 0em;
   font-size: 2vh;
-  min-height: 2em;
+  min-height: 1.6em;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   overflow: hidden;
+  width: 120vh;
 }
 
 .detailImageContainer:has(.cardImageIcon.material-icons.person) {
@@ -1948,16 +1951,39 @@ button.is-emby-button emby-button {
 
 .layout-desktop div.itemMiscInfo.itemMiscInfo-primary,
 .layout-tv div.itemMiscInfo.itemMiscInfo-primary {
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
   filter: drop-shadow(0px 4px 1px #0005);
-  justify-content: flex-start;
-  width: 100%;
-  gap: 2%;
+  gap: 3%;
   margin-bottom: 0 !important;
-  max-height: 4em;
-  transform: translateY(20%);
   font-size: 0.9em;
+  justify-content: space-between;
+  position: absolute;
+  top: 1.3em;
+  left: 47.9vh;
+  margin-top: 0vh;
+  width: 20vh;
+  max-height: 3vh;
+  color: #fff;
+  pointer-events: all;
+  transition: width 0.2s ease-out 1s, background-color 1s ease-out 0s, border-color 0.5s ease-out 0s, padding-left 1s ease-out 0.25s, padding-right 1s ease-out 0.25s;
+  padding-top: 0.4em;
+  border-color: transparent;
+  border-radius: var(--rounding);
+  background-color: transparent;
+}
+
+.layout-desktop div.itemMiscInfo.itemMiscInfo-primary:hover,
+.layout-tv div.itemMiscInfo.itemMiscInfo-primary:focus {
+  width: 100vh;
+  transition: width 0.2s ease-out 1s, background-color 1s ease-out 0s, border-color 0.5s ease-out 0s, padding-left 1s ease-out 0.25s, padding-right 1s ease-out 0.25s;
+  background-color: var(--tint);
+  border: 0.5px solid;
+  border-color: #fff3;
+  margin-top: calc(0vh - 1px);
+  margin-left: -1px;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 .layout-desktop .itemName.originalTitle,
@@ -2475,7 +2501,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   position: fixed;
   left: 2.9em;
   transform: translateX(-50%) translateY(-100%);
-  top: 35.75em;
+  top: 25.25em;
   z-index: 2;
   padding: 1em;
   padding-top: 1em;
@@ -2491,8 +2517,8 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 .layout-desktop #itemDetailPage .itemExternalLinks .button-link.emby-button, 
 .layout-tv #itemDetailPage .itemExternalLinks .button-link.emby-button {
   background: var(--tint);
-  padding: 7px;
-  border-radius: 8px;
+  padding: 0.7vh;
+  border-radius: var(--rounding);
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.68));
@@ -2506,8 +2532,8 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 a[href*="imdb.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/WWKKmLcC/imdb.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2522,8 +2548,8 @@ a[href*="imdb.com"] {
 a[href*="trakt.tv"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/G6p74rm/trakt.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2537,8 +2563,8 @@ a[href*="trakt.tv"] {
 a[href*="themoviedb.org"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/Mk9r3tqm/tmdb.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2552,8 +2578,8 @@ a[href*="themoviedb.org"] {
 a[href*="themoviedb.org/collection"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/9kvKdzj9/tmdbcollection.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2563,8 +2589,8 @@ a[href*="themoviedb.org/collection"]::before {
 a[href*="thetvdb.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/0jKrJ38d/tvdb.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2578,8 +2604,8 @@ a[href*="thetvdb.com"] {
 a[href*="tvmaze.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/YTqbgfJc/tvmaze.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2593,8 +2619,8 @@ a[href*="tvmaze.com"] {
 a[href*="anidb.net"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/GNzTYhz/anidb.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2608,8 +2634,8 @@ a[href*="anidb.net"] {
 a[href*="anilist.co"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/tM2cNLZm/anilist.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2623,8 +2649,8 @@ a[href*="anilist.co"] {
 a[href*="kitsu.app"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/Ng8RmDFg/kitsu.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2638,8 +2664,8 @@ a[href*="kitsu.app"] {
 a[href*="theaudiodb.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/TMqCZLtp/theaudiodb.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2653,8 +2679,8 @@ a[href*="theaudiodb.com"] {
 a[href*="music.apple.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/wZq3Xw5K/applemusic.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2668,8 +2694,8 @@ a[href*="music.apple.com"] {
 a[href*="musicbrainz.org"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/r2mW8XbQ/musicbrainz.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2683,8 +2709,8 @@ a[href*="musicbrainz.org"] {
 a[href*="myanimelist.net"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/YFbTWhnQ/myanimelist.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2698,8 +2724,8 @@ a[href*="myanimelist.net"] {
 a[href*="kinopoisk.ru"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/N6TZ0yjZ/kinopoisk.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -2713,8 +2739,8 @@ a[href*="kinopoisk.ru"] {
 a[href*="shokoanime.com"]::before {
   content: "";
   display: inline-block;
-  width: 40px;
-  height: 20px;
+  width: 4vh;
+  height: 2vh;
   background-image: url('https://i.ibb.co/mChjxCk6/shokoanime.png');
   background-size: contain;
   background-repeat: no-repeat;
@@ -4109,20 +4135,14 @@ a[href*="shokoanime.com"] {
 
 .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary,
 .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary {
-  font-weight: 600;
-  text-align: center;
-  filter: drop-shadow(0px 4px 1px #0005);
-  justify-content: flex-start;
-  padding-top: 0em;
-  width: 100%;
-  gap: 5%;
 }
 
-@media (max-height: 1000px) {
-  .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary,
-  .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary {
-    width: 96%;
-  }
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary,
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary {
+    left: 60.7vh;
+    top: 2.2vh;
+    height: 1.6em;
+    max-width: 84vh;
 }
 
 .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .detailLogo,
@@ -4236,6 +4256,8 @@ a[href*="shokoanime.com"] {
 .layout-tv .itemMiscInfo.itemMiscInfo-primary .mediaInfoItem {
   margin: 0;
   font-size: 1.25em;
+  margin-top: -0.1em;
+  margin-bottom: 0.1em;
 }
 
 .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .nameContainer,
